# tooling_demo_python

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  requirements.in  requirements_lock.txt
.github/workflows/: check-formatting.yml  formatting.yml  static_checks.yml  test.yml  type_checks.yml
compute/: BUILD.bazel  __init__.py  add_two.py
doc/: BUILD.bazel  conf.py.tpl  index.rst  sphinx.bzl
doc/reference/: api.rst
src/: BUILD.bazel
test/: BUILD.bazel  test_add_two.py  unit_test.py
