load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# This does something with Python dependencies using pip.
compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
    # requirements_windows = "requirements_windows.txt",
)
