module(name = "tooling_demo_python")

# Depend on rules_python explicitly so a version can be chosen that has
# sphinxdocs in it.
bazel_dep(name = "rules_python", version = "0.32.0")
git_override(
    module_name = "rules_python",
    commit = "d3cec48e415dd598a773335532cbc5647c985a93",
    remote = "https://github.com/bazelbuild/rules_python.git",
)

bazel_dep(name = "caseyduquettesc_rules_python_pytest", version = "0.0.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_packages",
    python_version = "3.11",
    # requirements_lock.txt is generated with: bazel run //:requirements.update
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "python_packages")

git_override(
    module_name = "caseyduquettesc_rules_python_pytest",
    commit = "7c07b3957e7756610b0195908cb01ec20a80125a",
    remote = "https://github.com/caseyduquettesc/rules_python_pytest.git",
)
